# agent-as-a-router

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml  requirements-sandbox.txt  requirements.txt
.github/: copilot-instructions.md
.serena/: project.yml
.serena/memories/: kestrel_analysis.md
agentic-artifacts/: PAPER.md  README.md  index.html  manifest.json
agentic-artifacts/logic/: claims.md  experiments.md
cc-switch/: README.md  README_ZH.md
claude-code-router/: README.md  README_zh.md
configs/: eval_pipeline.example.json
data/: README.md
docs/: 2606.22902v3-paper-notes.md  2606.22902v3-technical-reference.md  HANDBOOK.md  MEMORY_PERSISTENCE_PLAN_SUMMARY.md  PLAN_UPDATE_COMPLETE.md  PLAN_UPDATE_COMPLETION_SUMMARY.md  PLAN_UPDATE_INDEX.md  PROXY_COEXISTENCE.md  ROUTER_MEMORY_PERSISTENCE.md  SERILOG_LOGGING_GUIDE.md  SERILOG_POLICY_COMPLETE.md  SYSTEM_PROXY_ARCHITECTURE.md  VERIFICATION_SUMMARY.md  phase0-phase1-change-log.md
examples/: inference_demo.py
scripts/: build_compact_data.py  build_ood176_dataset.py  build_ood_patch_bundle.py  build_sandbox_cache.py  check_no_secrets.sh  download_hf_assets.py  export_coderouterbench.py  grade_swebench_apptainer.py  grade_swebench_docker.py  run_acrouter_ood176.py  run_all.py  run_baselines_ood176.py  run_id.py  run_ood.py  run_ood_sandbox.py  run_pipeline.py  upload_coderouterbench_hf.sh  upload_qwen08b_router_hf.sh
src/: README.md
tests/: test_bundle_integrity.py  test_custom_pipeline.py  test_demos.py  test_hf_assets.py  test_inference_api.py  test_sandbox_verifier.py
(+278 files in other folders)
