[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acrouter-repro"
version = "0.1.0"
description = "Offline ACRouter reproduction, custom evaluation pipeline, and inference integration API."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "ACRouter Authors"}
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["acrouter_repro*", "routing*"]

